almost up to 3.11, needs some polish on earth event chain. and to make sure it goes through properly

--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -14,7 +14,7 @@
  Pink: "§PPink§!"
  Diamond: "Diamond"
  
- #Ruler Class
+ #Ruler Class unused
  diamond_class: "Diamond"
  diamond_class_plural: "Diamonds"
  diamond_class_plural_with_icon: "£minerals£ Diamonds"
@@ -63,7 +63,7 @@
  EMPIRE_DESIGN_gem: "Diamond Authority"
  EMPIRE_DESIGN_gem_desc: "The Great Diamond Authority is a vast interstellar empire, dominated by a race of polymorphic sentient geoloids, known colloquially as 'Gems'. Mysterious in their origins and possessing unusual abilities, it remains uncertain whether the Gem race is a natural product of evolution, a manufactured mechanical construct, a random convergence of quantum energy, or the result of some other unforeseen catalyst. All that is known is their parasitic behavior, invading and conquering worlds to drain the organic energy from its very soil, and use it to grow more of their kind.\n\nThe beauty of their forms and the structures they build hide a bleak and terrible nature, a society built upon the indentured servitude of all Gems to their Diamonds, where all know their place and dare not deviate from it."
  EMPIRE_DESIGN_gem_rogue: "$EMPIRE_DESIGN_gem$"
- EMPIRE_DESIGN_gem_rogue_desc: "§RThe Sun is gone, our Homeworld wanders the void!§!\n$EMPIRE_DESIGN_gem_desc$"
+ EMPIRE_DESIGN_gem_rogue_desc: "§LOur Homeworld wanders the void!§!\n$EMPIRE_DESIGN_gem_desc$\n\n§HThis has no real impact on the game.§!"
  EMPIRE_DESIGN_gem_white: "$white_diamond$ has taken control"
  EMPIRE_DESIGN_gem_white_desc: "All are one, all are $white_diamond$. The 'Gems': Mysterious in their origins and possessing unusual abilities are now one mind, it remains uncertain whether the Gem race is a natural product of evolution, a manufactured mechanical construct, a random convergence of quantum energy, or the result of some other unforeseen catalyst. All that is known is their parasitic behavior, invading and conquering worlds to drain the organic energy from its very soil, and use it to grow more of their kind.\n\nThe beauty of their forms and the structures they build hide a bleak and terrible nature, a society built upon the indentured servitude of all Gems to their Diamonds, where all know their place and dare not deviate from it."
  
@@ -280,6 +280,8 @@
  building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarden for improved performance."
  building_buff_kindergarten3: "Kindergarden Managment Complex"
  building_buff_kindergarten3_desc: "All Kindergardens on this planet are being coordianted and managed for maximum efficiency."
+ building_crystal_gem_temple: "Crystal Gem Temple"
+ building_crystal_gem_temple_desc: "The Temple is the statue of a gigantic 8 armed woman carved into the side of a cliff in an idyllic little beach town. The §l$crystal_gems$§! live here in their enigmatic ways."
  
  gem_era.4.name: "Era of $white_diamond$"
  gem_era.4.desc: "All are one. All are perfect and harmonious!"
@@ -429,6 +431,8 @@
  #Gem Rebellion Events, included 1000 (10-20) year war
  gem_off_colors.1010.name: "Production above expectations"
  gem_off_colors.1010.desc: "Recent reports from §Y[This.GetName]§! have shown Rose Quartz Gem £pops£ Production is above previously expected levels."
+ gem_off_colors.1019.name: "Protests Escalate"
+ gem_off_colors.1019.desc: "The [Owner.GetSpeciesNamePlural] that have been protesting our development of §Y[This.GetName]§! have escalated their futile efforts. Occasionally some [Owner.GetSpeciesNamePlural] refuse orders."
  gem_off_colors.1020.name: "Gem on the loose"
  gem_off_colors.1020.desc: "A dissitant Gem was spotted on §Y[This.GetName]§!! She used old down colony equipment to sabotage recent construction efforts."
  gem_off_colors.1030.name: "The Rebel Gems"
@@ -445,11 +449,16 @@
  gem_off_colors.1034.desc: "When $yellow_diamond$ arrived on §Y[This.GetName]§! she met with a §BSapphire§! to have her predict how to end the rebellion.\n\nAs predicted the meeting between $yellow_diamond$ and the §BSapphire§! was attacked by §PThe Rebels§! they Proclaimed themself to be the Crystal Gems. They cleeved through all defenders.\nBut just before the predicted capture of §PThe Rebels§! the unthinkable happend. A §RRuby Guard§! fused with the §BSapphire§!. But before they could be punished they fled together with §PThe Rebels§!."
  gem_off_colors.1034.a: "§YOrganize the meeting at once!§!"
  gem_off_colors.1035.name: "The Prophetic Gem"
- gem_off_colors.1035.desc: "§RSTRATEGIC ADVICE§!\nBased on the recent events and the desertion of a §BSapphire§! our strategists predict that violence is inevitable.\n\n§RIt is recommended to move military forces to §Y[This.GetName]§!"
+ gem_off_colors.1035.desc: "§RSTRATEGIC ADVICE§!\nBased on the recent events and the desertion of a §BSapphire§! our strategists predict that violence is inevitable.\n\n§RIt is recommended to move military forces to §Y[This.GetName]§!\n\n We have at most a year to prepare."
  gem_off_colors.1035.a: "At least this §HPadparadscha§! is not a deserter"
  gem_off_colors.1040.name: "$pink_d$ moves her Court to §Y[This.GetName]§!"
  gem_off_colors.1040.desc: "$pink_diamond$ is on her way to §Y[This.GetName]§!. While she could control all aspects of the Colony from her control room on §Y[Owner.Capital.GetName]§! she expressed that direct intervention might be necessary."
  gem_off_colors.1040.a: "Her presence will bring peace"
+ gem_off_colors.1041.name: "$pink_d$ refuses new assignment"
+ gem_off_colors.1041.desc: "Headstrong and only accountable to themselfs are diamonds.\n $pink_diamond$ simply went back to §Y[This.GetName]§!\n\n§SMaybe it is better §Hfor cosmic reasons§S to leave her on §Y[This.GetName]§S.§!"
+ gem_off_colors.1041.a: "I guess so"
+ gem_1000_year_war_gets_worse_over_time: "With the progression of the Rebellion on §Y[gem_planet_earth_event.GetName]§! the conditions on the planet will get worse and worse, but this comes with unique opportunities for exploitation."
+ gem_1000_year_war_create_jasper: "The Leader §YJasper§! has appeared on §Y[gem_planet_earth_event.GetName]§!"
  gem_off_colors.2000.name: "The Crystal Gem"
  gem_off_colors.2000.desc: "The Gem that shattered $pink_diamond$ On was idendified as their Leader. It was a §PRose§! Quartz Gem!"
  gem_off_colors.2000.a: "A ROSE QUARTZ?"
@@ -481,6 +490,12 @@
  gem_off_colors.1054.a: "The Horror"
  gem_off_colors.1055.name: "Production Diverted"
  gem_off_colors.1055.desc: "All gem £pops£ production has been diverted to military means. All new Gems will be soldires for the War effort."
+ pm_gem_less_assemble1: "$gem_off_colors.1055.name$"
+ pm_gem_less_assemble1.desc: "$gem_off_colors.1055.desc$"
+ pm_gem_less_assemble2: "$gem_off_colors.1055.name$"
+ pm_gem_less_assemble2.desc: "$gem_off_colors.1055.desc$"
+ pm_gem_less_assemble3: "$gem_off_colors.1055.name$"
+ pm_gem_less_assemble3.desc: "$gem_off_colors.1055.desc$"
  gem_off_colors.1055.a: "§HShe§! took out 80 on her first day?"
  gem_off_colors.1056.name: "The flames of war rage once more"
  gem_off_colors.1056.desc: "For a brief moment we thought to have defeated the Crystal Gems but they are back and even some of our defenders have joined them."
@@ -491,7 +506,7 @@
  gem_off_colors.2002.b: "those who fall will be left behind"
  gem_off_colors.2003.name: "The Final Attack"
  gem_off_colors.2003.desc: "The Shattering of $pink_d$ will not be go unanswered, all deserve the ultimate punishment.\n\nAll Gem life on §Y[This.GetName]§! will be annihilated"
- gem_off_colors.2003.a: "Evacuate all Gems!"
+ gem_off_colors.2003.a: "Evacuate all [Owner.GetSpeciesNamePlural]!"
  pm_off_color_saboteur: "Saboteur"
  pm_gem_no_assemble: "All Gems under Arms"
  pm_boubled_rose_gem: "Boubled Rose Gems"
@@ -541,14 +556,18 @@
  pink_situation_monthly_change_tooltip: "Her mood is going down"
  pink_situation_complete: "Pink Complete"
  pink_situation_complete_desc: "Pink Complete description"
+ gem_sit_nothing_happens: "Nothing is happening"
+ gem_sit_something_happens: "Something is happening"
  
 #1000 year war
- gem_1000_year_war: "[gem_planet_earth_event.GetName] Rebellion"
+ gem_1000_year_war: "Crystal Gem Rebellion"
+ gem_1000_year_war_name: "$START_SITUATION_EFFECT$the §Y[Planet.GetName] Rebellion§!"
  gem_1000_year_war_desc: "Offcolors and dissitant Gems on [gem_planet_earth_event.GetName] have Rose against us!\n\n §LCry 'Havoc!' and let slip the dogs of war!§!"
  1000_year_war_victory: "This rebellion will be crushed as swiftly as ever, at most a footnote for future historians."
+ 1000_year_war_defeat: "§LThis outcome is impossible.§!\n\n But while this situation is developing, maybe we can benifit from it."
  gem_1000_year_war_type: "The $gem_1000_year_war$"
- gem_1000_year_war_monthly_change_tooltip:"The Rebels on [gem_planet_earth_event.GetName] seek to liverate the world they see as their own new $NAME_Homeworld$."
- gem_1000_year_war_step1: "Collapse"
+ gem_1000_year_war_monthly_change_tooltip:"The Rebels on [gem_planet_earth_event.GetName] seek to liberate the world they see as their own new $NAME_Homeworld$."
+ gem_1000_year_war_step1: "Collapse":
  gem_1000_year_war_step2: "Total War"
  gem_1000_year_war_step3: "Civil War"
  gem_1000_year_war_step4: "Insurgency"
