--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -13,6 +13,8 @@
  Blue: "§BBlue§!"
  Pink: "§PPink§!"
  Diamond: "Diamond"
+ Diamonds: "Diamonds"
+
  
  #Ruler Class unused
  diamond_class: "Diamond"
@@ -97,6 +99,15 @@
  trait_pc_gem_preference_desc: "$trait_pc_arctic_preference_desc$"
  trait_pc_gemworld_preference: "$trait_pc_gem_preference$"
  trait_pc_gemworld_preference_desc: "$trait_pc_gem_preference_desc$"
+
+ trait_white_court: "$white_diamond$'s Court"
+ trait_white_court_desc: "This is $white_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
+ trait_yellow_court: "$yellow_diamond$'s Court"
+ trait_yellow_court_desc: "This is $yellow_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
+ trait_blue_court: "$blue_diamond$'s Court"
+ trait_blue_court_desc: "This is $blue_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
+ trait_pink_court: "$pink_diamond$'s Court"
+ trait_pink_court_desc: "This is $pink_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
  
  origin_geoform: "Planetary Transformation"
  origin_geoform_desc: "This society has worked tirelessly to transform their home planet into a paradise for their kind, though it may not be a paradise for most other forms of life."
@@ -444,6 +455,8 @@
  gem_off_colors.1031.b: "§YThis needs a strong hand§!"
  gem_off_colors.1033.name: "$blue_d$"
  gem_off_colors.1033.desc: "When $blue_diamond$ arrived on §Y[This.GetName]§! she met with a §BSapphire§! to have her predict how to end the rebellion.\n\nAs Predicted the meeting between $blue_diamond$ and the §BSapphire§! was attacked by §PThe Rebels§! they Proclaimed themself to be the Crystal Gems. They cleeved through all defenders.\nBut just before the predicted capture of §PThe Rebels§! the unthinkable happend.\n\nA §RRuby Guard§! fused with the §BSapphire§!. But before they could be punished they fled together with §PThe Rebels§!."
+ gem_more_gem_production: "The Rubies have failt us, bring in more Topaz"
+ gem_more_weapon_production: "The Rubies have failt us, they need better weapons"
  gem_off_colors.1033.a: "§BOrganize the meeting at once!§!"
  gem_off_colors.1034.name: "$yellow_d$"
  gem_off_colors.1034.desc: "When $yellow_diamond$ arrived on §Y[This.GetName]§! she met with a §BSapphire§! to have her predict how to end the rebellion.\n\nAs predicted the meeting between $yellow_diamond$ and the §BSapphire§! was attacked by §PThe Rebels§! they Proclaimed themself to be the Crystal Gems. They cleeved through all defenders.\nBut just before the predicted capture of §PThe Rebels§! the unthinkable happend. A §RRuby Guard§! fused with the §BSapphire§!. But before they could be punished they fled together with §PThe Rebels§!."
@@ -479,6 +492,7 @@
  gem_off_colors.0030.b_desc: "§PWhoops ^^§!"
  gem_off_colors.0031.desc: "$pink_d$ has thrown another tantrum, her outbreaks are becoming worse every time.\n\nShe damaged the Palace on §Y[Owner.Capital.GetName]§!.\n\n§R-5% £happiness£ $HAPPINESS_LABEL$ on §Y[Owner.Capital.GetName]§!."
  gem_off_colors.0031.a: "We should do something about it"
+ gem_off_colors.0031.b: "$pink_d$ will have her planet"
  gem_off_colors.0032.desc: "$pink_d$ has thrown another tantrum, her outbreaks are becoming worse every time.\n\nShe has gone and physicaly abused subserviant gems, leaving some of them cracked §Y[Owner.Capital.GetName]§!."
  gem_off_colors.0032.a: "We should do something about it!"
  gem_off_colors.0034.name: "$pink_d$'s Party year"
@@ -518,7 +532,7 @@
  pm_pink_tantrum_2: "$pink_d$'s Tantrum"
  pm_pink_tantrum_3: "$pink_d$'s Tantrum"
  pm_gem_human_experiement: "Human Experiements"
- pm_gem_human_experiement_desc: "These creatures show remarcable instincts, its fun to see them experiements."
+ pm_gem_human_experiement_desc: "These creatures show remarcable instincts, its fun to see them try."
  pm_grand_court_1: "The Grand Court"
  pm_grand_court_1_desc: "The Grand Court on Homeworld is the primary home of our Diamonds"
  pm_grand_court_2: "$pm_grand_court_1$"
@@ -529,6 +543,7 @@
  blue_alive: "$blue_d$ is Alive"
  pink_alive: "$pink_d$ is alive"
  pink_got_earth: "$pink_d$ is busy on earth"
+ approach_lost_controll: "We lost control of the Situation"
  
  #Diamon ascention events
  gem_diamond_ascention.1101.name: "$white_diamond$'s Ascention"
